tests/baselines/reference/spreadInvalidArgumentType.errors.txt
tests/cases/compiler/spreadInvalidArgumentType.ts(19,16): error TS2698: Spread types may only be created from object types.
tests/cases/compiler/spreadInvalidArgumentType.ts(21,16): error TS2698: Spread types may only be created from object types.
tests/cases/compiler/spreadInvalidArgumentType.ts(23,16): error TS2698: Spread types may only be created from object types.
tests/cases/compiler/spreadInvalidArgumentType.ts(24,16): error TS2698: Spread types may only be created from object types.
tests/cases/compiler/spreadInvalidArgumentType.ts(26,16): error TS2698: Spread types may only be created from object types.
tests/cases/compiler/spreadInvalidArgumentType.ts(29,16): error TS2698: Spread types may only be created from object types.
tests/cases/compiler/spreadInvalidArgumentType.ts(31,17): error TS2698: Spread types may only be created from object types.


==== tests/cases/compiler/spreadInvalidArgumentType.ts (7 errors) ====
    function f<T extends { b: string }>(p1: T, p2: T[]) {
        var t: T;
    
        var i: T["b"];
        var k: keyof T;
    
        var mapped_generic: {[P in keyof T]: T[P]};
        var mapped: {[P in "b"]: T[P]};
    
        var union_generic: T | { a: number };
    
        var intersection_generic: T & { a: number };
    
        var u: undefined;
        var n: null;
    
        var a: any;
    
        var o1 = { ...p1 };   // Error, generic type paramterre
                   ~~~~~
!!! error TS2698: Spread types may only be created from object types.
        var o2 = { ...p2 };   // OK
        var o3 = { ...t };   // Error, generic type paramter
                   ~~~~
!!! error TS2698: Spread types may only be created from object types.
    
        var o4 = { ...i };   // Error, index access
                   ~~~~
!!! error TS2698: Spread types may only be created from object types.
        var o5 = { ...k };   // Error, index
                   ~~~~
!!! error TS2698: Spread types may only be created from object types.
    
        var o6 = { ...mapped_generic }; // Error, generic mapped object type
                   ~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
        var o7 = { ...mapped };  // OK, non-generic mapped type
    
        var o8 = { ...union_generic };  // Error, union with generic type parameter
                   ~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    
        var o10 = { ...intersection_generic };  // Error, intersection with generic type parameter
                    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    
        var o14 = { ...u };  // OK
        var o15 = { ...n };  // OK
    
        var o16 = { ...a };  // OK
    }
    